--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,4 +1,4 @@
-<%- include('./layouts/start.ejs') %>
+<%- include('../layouts/start.ejs') %>
 
     <section class="py-5">
         <div class="container px-4 px-lg-5 mt-5">
@@ -9,7 +9,8 @@
                         <div class="col mb-5">
                             <div class="card h-100">
 
-                                <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                                <img class="card-img-top" style=" width: 100%; height: 15vw; object-fit: cover;"
+                                    src="<%= product.imageUrl ? product.imageUrl : 'https://www.dionid.com/app/uploads/2020/06/placeholder-1200x0-c-default.png' %>"
                                     alt="..." />
 
                                 <div class="card-body p-4">
@@ -18,13 +19,18 @@
                                         <h5 class="fw-bolder">
                                             <%= product.title %>
                                         </h5>
-                                        $40.00 - $80.00
+                                        <%= product.price ? "$" + product.price : '' %>
                                     </div>
                                 </div>
 
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View
-                                            options</a>
+                                    <div class="text-center">
+                                        <a class="btn btn-outline-success mt-auto" href="/products/1/edit">
+                                            Edit
+                                        </a>
+                                        <form class='d-inline'>
+                                            <button class="btn btn-outline-danger mt-auto" type="submit">Delete</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -37,4 +43,4 @@
         </div>
     </section>
 
-    <%- include('./layouts/end.ejs') %>
+    <%- include('../layouts/end.ejs') %>
