--- a/views/shop/product-details.ejs
+++ b/views/shop/product-details.ejs
@@ -1,3 +1,31 @@
 <%- include('../layouts/start.ejs') %>
 
+    <!-- Product section-->
+    <section class="py-5">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="row gx-4 gx-lg-5 align-items-center">
+                <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
+                        src="<%= product.imageUrl ? product.imageUrl : 'https://www.dionid.com/app/uploads/2020/06/placeholder-1200x0-c-default.png' %>"
+                        alt="..." /></div>
+                <div class="col-md-6">
+                    <div class="small mb-1">SKU: <%= product.id %>
+                    </div>
+                    <h1 class="display-5 fw-bolder">
+                        <%= product.title %>
+                    </h1>
+                    <div class="fs-5 mb-5">
+
+                        <span>$<%= product.price %></span>
+                    </div>
+                    <p class="lead">
+                        <%= product.description %>
+                    </p>
+                    <div class="d-flex">
+                        <%- include('../includes/shop/add-to-cart.ejs') %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <%- include('../layouts/end.ejs') %>
