--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,3 +1,48 @@
 <%- include('../layouts/start.ejs') %>
 
+
+    <!-- Section-->
+    <section class="py-5">
+        <div class="container">
+            <form action="<%= editing ? `/admin/products/${product.id}` : 'product' %>" method="POST">
+                <% if(editing) { %>
+                    <input type="hidden" name="_method" value="PUT">
+                    <% } %>
+
+                        <div class="mb-3">
+                            <label for="title" class="form-label">Product Title</label>
+                            <input type="text" class="form-control" id="title" name="title" aria-describedby="title"
+                                value="<%= editing ? product.title : null %>" required>
+                            <div id="title" class="form-text">Name of the product</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="imageUrl" class="form-label">Image URL</label>
+                            <input type="text" class="form-control" id="imageUrl" name="imageUrl"
+                                aria-describedby="imageUrl" value="<%= editing ? product.imageUrl : null %>">
+                            <div id="imageUrl" class="form-text">Product image URL</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="price" class="form-label">Price</label>
+                            <input type="number" class="form-control" id="price" name="price" aria-describedby="price"
+                                step="0.01" value="<%= editing ? product.price : null %>" required>
+                            <div id="price" class="form-text">Product price</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Description</label>
+                            <textarea class="form-control" id="description" name="description"
+                                aria-describedby="description"><%= editing ? product.description : null %></textarea>
+                            <div id="description" class="form-text">Product Description</div>
+                        </div>
+
+                        <button type="submit" class="btn btn-<%= editing ? 'success' : 'primary' %>">
+                            <%= editing ? "Edit" : "Add" %> Product
+                        </button>
+            </form>
+        </div>
+    </section>
+
+
     <%- include('../layouts/end.ejs') %>
