--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -6,7 +6,7 @@
 
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <% orders.forEach(order=> { %>
-                        <% order.products.forEach(product=> { %>
+                        <% order.items.forEach(product=> { %>
                             <div class="col mb-5">
                                 <div class="card h-100">
 
