--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -4,29 +4,38 @@
         <div class="container px-4 px-lg-5 mt-5">
             <% if (orders.length> 0) { %>
 
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <% orders.forEach(order=> { %>
-                        <% order.items.forEach(product=> { %>
+
+                <% orders.forEach(order=> { %>
+                    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content">
+                        <div class='col-12'>
+                            <h4 class='alert alert-secondary'>
+                                #<%= order._id %>
+                            </h4>
+                        </div>
+
+                        <% order.products.forEach(p=> { %>
                             <div class="col mb-5">
                                 <div class="card h-100">
 
                                     <img class="card-img-top" style=" width: 100%; height: 15vw; object-fit: cover;"
-                                        src="<%= product.imageUrl ? product.imageUrl : 'https://www.dionid.com/app/uploads/2020/06/placeholder-1200x0-c-default.png' %>"
+                                        src="<%= p.product.imageUrl ? p.product.imageUrl : 'https://www.dionid.com/app/uploads/2020/06/placeholder-1200x0-c-default.png' %>"
                                         alt="..." />
 
                                     <div class="card-body p-4">
                                         <div class="text-center">
-
+                                            <h6 class="fw-light">
+                                                Quantity: <%= p.quantity %>
+                                            </h6>
                                             <h5 class="fw-bolder">
-                                                <%= product.title %>
+                                                <%= p.product.title %>
                                             </h5>
-                                            <%= product.price ? "$" + product.price : '' %>
+                                            <%= p.product.price ? "$" + p.product.price : '' %>
                                         </div>
                                     </div>
 
                                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                         <div class="text-center"><a class="btn btn-outline-dark mt-auto"
-                                                href="/products/<%= product._id %>">
+                                                href="/products/<%= p.product._id %>">
                                                 View
                                             </a>
                                         </div>
@@ -34,11 +43,11 @@
                                 </div>
                             </div>
                             <% }); %>
-                                <% }); %>
-                </div>
-                <% } else { %>
-                    <h1 class="text-secondary">You don't have orders yet :(</h1>
-                    <% } %>
+                    </div>
+                    <% }); %>
+                        <% } else { %>
+                            <h1 class="text-secondary">You don't have orders yet :(</h1>
+                            <% } %>
         </div>
     </section>
     <%- include('../layouts/end.ejs') %>
