--- a/views/includes/auth/sidenav.ejs
+++ b/views/includes/auth/sidenav.ejs
@@ -3,6 +3,10 @@
         <h2>Application<br>
             <%= pageTitle %> Page
         </h2>
-        <p>Authenticate to access MegaShop</p>
+        <p>Authenticate to access <span class='text-uppercase font-weight-bold'><a href="/"
+                    class="text-success text-decoration-none">
+                    <h1>MegaShop</h1>
+                </a></span>
+        </p>
     </div>
 </div>
