--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,20 +1,29 @@
 <%- include('../layouts/auth/start.ejs') %>
 
     <div class="main">
+
         <div class="mx-5 col-md-6 col-sm-12">
             <div class="login-form">
-                <form action="/login" method="POST">
-                    <div class="form-group mb-3">
-                        <label><i class="bi-person me-1"></i>Email</label>
-                        <input type="text" class="form-control" name='email' placeholder="Email" required>
+                <% if(error) { %>
+                    <div class="alert alert-danger" role="alert">
+                        <%= error %>
                     </div>
-                    <div class="form-group mb-3">
-                        <label><i class="bi-key me-1"></i>Password</label>
-                        <input type="password" class="form-control" name='password' placeholder="Password" required>
-                    </div>
-                    <button type="submit" class="btn btn-black">Login</button>
-                    <a href="/signup"><button class="btn btn-secondary" type="button">Register</button></a>
-                </form>
+                    <% } %>
+                        <form action="/login" method="POST">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
+                            <div class="form-group mb-3">
+                                <label><i class="bi-person me-1"></i>Email</label>
+                                <input type="email" class="form-control" name='email' placeholder="Email" required>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label><i class="bi-key me-1"></i>Password</label>
+                                <input type="password" class="form-control" name='password' placeholder="Password"
+                                    required>
+                            </div>
+                            <button type="submit" class="btn btn-black">Login</button>
+                            <a href="/signup"><button class="btn btn-secondary" type="button">Register</button></a>
+                        </form>
             </div>
         </div>
     </div>
