--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -32,6 +32,8 @@
                                             View
                                         </a>
                                         <form action="cart/<%= p.productId._id %>" class="d-inline" method="POST">
+                                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
                                             <button type="submit" class="btn btn-outline-danger">Delete</button>
                                         </form>
                                     </div>
@@ -40,6 +42,8 @@
                         </div>
                         <% }); %>
                             <form action="/orders" method="post">
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
                                 <button type="submit" class="btn btn-success">Order Now!</button>
                             </form>
                 </div>
