--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -43,7 +43,7 @@
                         <% }); %>
                 </div>
                 <% } else { %>
-                    <h1 class="text-secondary">Store is empty :(</h1>
+                    <h1 class="text-secondary">You don't have products!</h1>
                     <% } %>
         </div>
     </section>
