--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -1,6 +1,8 @@
 <%- include('../layouts/auth/start.ejs') %>
+    <!-- <link rel="stylesheet" href="style.css"> -->
 
     <div class="main">
+
         <div class="mx-5 col-md-6 col-sm-12">
             <div class="login-form">
                 <% if(error) { %>
@@ -8,13 +10,11 @@
                         <%= error %>
                     </div>
                     <% } %>
-                        <form action="/signup" method="POST">
+                        <form action="/new-password" method="POST">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <input type="hidden" name="userId" value="<%= userId %>">
+                            <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
 
-                            <div class="form-group mb-3">
-                                <label><i class="bi-person me-1"></i>Email</label>
-                                <input type="email" class="form-control" name='email' placeholder="Email" required>
-                            </div>
                             <div class="form-group mb-3">
                                 <label><i class="bi-key me-1"></i>Password</label>
                                 <input type="password" class="form-control" name='password' placeholder="Password"
@@ -25,9 +25,15 @@
                                 <input type="password" class="form-control" name='confirmPassword'
                                     placeholder="Confirm Password" required>
                             </div>
-                            <button type="submit" class="btn btn-black">Signup</button>
-                            <a href="/login"><button class="btn btn-outline-secondary" type="button">Login</button></a>
+
+                            <button type="submit" class="btn btn-success">Change Password</button>
+                            <a href="/login">
+                                <button class="btn btn-outline-secondary" type="button">Back to
+                                    Login
+                                </button>
+                            </a>
                         </form>
+
             </div>
         </div>
     </div>
