--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -3,31 +3,27 @@
     <div class="main">
         <div class="mx-5 col-md-6 col-sm-12">
             <div class="login-form">
-                <% if(error) { %>
-                    <div class="alert alert-danger" role="alert">
-                        <%= error %>
-                    </div>
-                    <% } %>
-                        <form action="/signup" method="POST">
-                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                <%- include('../includes/alert.ejs') %>
 
-                            <div class="form-group mb-3">
-                                <label><i class="bi-person me-1"></i>Email</label>
-                                <input type="email" class="form-control" name='email' placeholder="Email" required>
-                            </div>
-                            <div class="form-group mb-3">
-                                <label><i class="bi-key me-1"></i>Password</label>
-                                <input type="password" class="form-control" name='password' placeholder="Password"
-                                    required>
-                            </div>
-                            <div class="form-group mb-3">
-                                <label><i class="bi-key-fill me-1"></i>Confirm Password</label>
-                                <input type="password" class="form-control" name='confirmPassword'
-                                    placeholder="Confirm Password" required>
-                            </div>
-                            <button type="submit" class="btn btn-black">Signup</button>
-                            <a href="/login"><button class="btn btn-outline-secondary" type="button">Login</button></a>
-                        </form>
+                    <form action="/signup" method="POST">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
+                        <div class="form-group mb-3">
+                            <label><i class="bi-person me-1"></i>Email</label>
+                            <input type="email" class="form-control" name='email' placeholder="Email" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label><i class="bi-key me-1"></i>Password</label>
+                            <input type="password" class="form-control" name='password' placeholder="Password" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label><i class="bi-key-fill me-1"></i>Confirm Password</label>
+                            <input type="password" class="form-control" name='confirmPassword'
+                                placeholder="Confirm Password" required>
+                        </div>
+                        <button type="submit" class="btn btn-black">Signup</button>
+                        <a href="/login"><button class="btn btn-outline-secondary" type="button">Login</button></a>
+                    </form>
             </div>
         </div>
     </div>
